# max

./: .gitignore  .gitlab-ci.yml  LICENSE  README.en.md  README.md  README.md.bak  README.ru.md
.github/: FUNDING.yml
doc/: note.txt
doc/features/: Таблица параметров юнитов в MaxGold v1.1 by Core - mgpar.txt  Таблица траты хода и топлива в MaxGold v1.3 by Core - mgfu.txt
resharper/: Dictionary.DotSettings  Formatting.DotSettings
source/: .editorconfig  MikhailKhalizev.Max.sln  MikhailKhalizev.Max.sln.DotSettings  old-cpp.sln
source/MikhailKhalizev.Max/: MikhailKhalizev.Max.csproj  MikhailKhalizev.Max.csproj.DotSettings  libman.json  start.cmd
source/MikhailKhalizev.Max.Static/: MikhailKhalizev.Max.Static.csproj
source/MikhailKhalizev.Max.Static/Pages/: Index.cshtml.cs  _ViewImports.cshtml
source/MikhailKhalizev.Max.Static/Properties/: launchSettings.json
source/MikhailKhalizev.Max.Static/source/: StartUp.cs
source/MikhailKhalizev.Max.Static/source/Configuration/: ConfigurationDto.cs  ProgramDto.cs
source/MikhailKhalizev.Max.Static/source/Dos/: DosDma.cs  DosInterrupt.cs  DosPort.cs  DosTimer.cs
source/MikhailKhalizev.Max.Tests/: MikhailKhalizev.Max.Tests.csproj
source/MikhailKhalizev.Max/Pages/: Error.cshtml.cs  Index.cshtml
source/MikhailKhalizev.Max/Properties/: launchSettings.json
source/MikhailKhalizev.Max/settings/: appsettings.Development.json  appsettings.json  definitions.json  funcs.json  method-jumps.json  methods.json  methods.runtime.json
source/MikhailKhalizev.Max/source/: StartupProxy.cs
source/MikhailKhalizev.Max/src/: MainController.cs  MainHub.cs  Program.cs  RawProgram.cs  StartUp.cs
source/MikhailKhalizev.Processor.x86/: MikhailKhalizev.Processor.x86.csproj  MikhailKhalizev.Processor.x86.csproj.DotSettings
source/MikhailKhalizev.Processor.x86.Tests/: MikhailKhalizev.Processor.x86.Tests.csproj
source/MikhailKhalizev.Processor.x86.Tests/resources/: instruction-decode-test.json
source/MikhailKhalizev.Processor.x86.Tests/source/: AddressTests.cs
source/MikhailKhalizev.Processor.x86.Tests/src/: AddressTests.cs  IntervalTests.cs  ValuesTests.cs
source/MikhailKhalizev.Processor.x86/resources/: decode.json
source/MikhailKhalizev.Processor.x86/src/: Address.cs  AddressJsonConverter.cs  AddressTypeConverter.cs  Block.cs
source/MikhailKhalizev.Utils/: MikhailKhalizev.Utils.csproj
source/MikhailKhalizev.Utils.Tests/: MikhailKhalizev.Utils.Tests.csproj
source/MikhailKhalizev.Utils.Tests/src/: MiscTests.cs
source/MikhailKhalizev.Utils/src/: AutoCleanup.cs  BinaryHelper.cs  HexHelper.cs  LimitedConcurrencyLevelTaskScheduler.cs  LongOperation.cs  LongOperationQueue.cs  Misc.cs  MiscExtensions.cs  ProgressStep.cs  ReaderWriterLockSlimWrap.cs  StringCompressor.cs  SymbolExtensions.cs  TypeHelper.cs  WeakEvent.cs
source/old-cpp/: main.cpp  memory_space.hpp  memory_space_dyn.hpp  old-cpp.sln  old-cpp.vcxproj  old-cpp.vcxproj.filters
source/old-cpp/dos/: dma.cpp  dma.hpp  interrupt.cpp  interrupt.hpp  memory.cpp  pic.cpp  ports.hpp  timer.cpp
source/old-cpp/libexo/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  correct-code.sh  libexo.files  libexo.includes  libtool  make.files.sh
source/old-cpp/libexo/include/exo/: Makefile  Makefile.am  Makefile.in  abstract_base (2).hpp  abstract_base.hpp  abstract_int.hpp  attributes.hpp  exception.hpp  global.hpp  linux.hpp  memory_space.hpp  process.hpp
source/old-cpp/libexo/include/exo/.in_process/: backtrace.hpp  integer.hpp  math.hpp  unique_val.hpp
source/old-cpp/libexo/include/exo/containers/integrety/: list_double_item.hpp
source/old-cpp/libexo/include/exo/format_header/: elf.hpp  exe.hpp  fat.hpp  wav.hpp
source/old-cpp/libexo/include/exo/format_header/fat/: boot_sector.hpp  directory_entry.hpp  fat.hpp  fat_item.hpp  fs_info.hpp  types.hpp
source/old-cpp/libexo/include/exo/format_worker/: fat.hpp
source/old-cpp/libexo/include/exo/linux/: enums.hpp  exception.hpp  io.hpp  time.hpp  types.hpp  types.hpp.in
source/old-cpp/libexo/include/exo/linux/.internal/: enums_body.hpp  enums_hdr.hpp
source/old-cpp/libexo/include/exo/math/: cxx_types_float.hpp  cxx_types_float.hpp (2).in  cxx_types_float.hpp.in  cxx_types_int.hpp  cxx_types_int.hpp (2).in  cxx_types_int.hpp.in  only_last_set.hpp  round.hpp  std_types.hpp  tags.hpp
source/old-cpp/libexo/include/exo/math/.in_process/: safe.hpp  safe_s.hpp  safe_u.hpp  sqrt.hpp
source/old-cpp/libexo/include/exo/math/detail/: int_double.hpp  int_single_bop.hpp  int_single_class.hpp
source/old-cpp/libexo/include/exo/syntax/: alternative.hpp  base.hpp  general.hpp  ignore.hpp  repeat.hpp  sequence.hpp  string.hpp
source/old-cpp/libexo/include/exo/syntax/c99/: syntax.hpp
source/old-cpp/libexo/include/exo/util/: auto_increment.hpp  count_of.hpp  delegate.hpp  flags.hpp  identificator.hpp  implicit_cast.hpp  type_helper.hpp  used_space.hpp  value_of_pointer_iterator.hpp
source/old-cpp/libexo/m4/: exo.m4
source/old-cpp/libexo/src/: Makefile  Makefile.am  Makefile.in  linux.cpp  todo.txt
source/old-cpp/libexo/src/.in_process/: backtrace.i386.c  backtrace.ia64.c  integer.cpp
source/old-cpp/libexo/src/format_header/fat/: boot_sector.cpp
source/old-cpp/libexo/src/linux/: exception.cpp  io.cpp  time.cpp  time_internal.hpp
source/old-cpp/libexo/src/new_server_arch/: arch.cpp  arch.hpp  arch_impl.hpp
source/old-cpp/libexo/src/syntax/: parse.hpp  parse_http.cpp  parse_http.hpp  parse_uri.hpp
source/old-cpp/libexo/src/syntax/test/: http_server.pro  test_http_server.cpp
source/old-cpp/libexo/test/: Makefile  Makefile (2).am  Makefile.am  Makefile.in  integer.cpp  memory_space.cpp
source/old-cpp/libexo/test/math/: std_types.cpp
source/old-cpp/libexo/test/syntax/: parse.cpp
source/old-cpp/libexo/test/util/: auto_increment.cpp  delegate.cpp  identificator.cpp  used_space.cpp
source/old-cpp/program/: known_definitions.hpp  raw_program.cpp  raw_program.hpp
source/old-cpp/src/: main.cpp  memory_space.cpp  memory_space_dyn.cpp  update_program_build.cpp
(+20485 files in other folders)
